# caltui

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md
src/: app.rs  config.rs  main.rs  notification.rs
src/calendar/: google.rs  ics.rs  mod.rs  vdir.rs
src/tui/: mod.rs
src/tui/views/: event_detail.rs  help.rs  mod.rs  settings.rs  timeline.rs
