[package]
name = "caltui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "caltui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
open = "5"
tui-textarea = "0.7"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
notify-rust = "4"
icalendar = "0.17"
chrono-tz = "0.10"
